<resources>
    <string name="app_name">pert9</string>
    <string name="judul">Sebuah Judul</string>
    <string name="sub_judul">Sub Judul</string>
    <string name="isi">aaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbcccccccccccccccccccccddddddddddddddddddddeeeeeeeeeeeeeeefffffffffffffggggggggggghhhhhhhhhhhhiiiiiiiiiiiiiijjjjjjjjjjjjjjjkkkkkkkkkkkkkkklllllllllllllllmmmmmmmmmmmmnnnnnnnnnnnooooooooooooppppppppppppppqqqqqqqrrrrrsssttttttttttttttuuuuuuuuuuvvvvvvvwwwwwwwwwxxxxxxxxxxxxxyyyyyyyyyyyyyyyzzzzzzzzzzzzzzzzzzz111111111111111122222222222222223333333333333334444444444444445555555555555556666666666666667777777777777888888888888888999999999999999999900000000000000000000000000000aaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbcccccccccccccccccccccccccccdddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeeeeeeeeefffffffffffffffffffffffgggggggggggggggghhhhhhhhhhhhhhhhhhhiiiiiiiiiiiiiiiiiiiiiiiiiijjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkkkkkkkkkkkkkkkkkkllllllllllllllllllllllllllllmmmmmmmmmmmmmmmmmmnnnnnnnnnnnnnnnnnnnnnnnnnnnnooooooooooooooooooooooooooppppppppppppppppppppppppppqqqqqqqqqqqqqqqqqqqqqqqqrrrrrrrrrrrrrrrrrrrrrrrrssssssssssssssssssssstttttttttttttttttttttttttttttttuuuuuuuuuuuuuuuuuuuuuuuuuuuuvvvvvvvvvvvvvvvvvvvvvvvvvvvvwwwwwwwwwwwwwwwwwwwwwwwwwwwxxxxxxxxxxxxxxxxxxxxxxxxxxxxyyyyyyyyyyyyyyyyyyyyyyyyyyzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz1111111111111111111111122222222222222222222223333333333333333333333333334444444444444444444444444444555555555555555555555555556666666666666666666666666666677777777777777777777777777888888888888888888888888899999999999999999999999999999999000000000000000000000000000000000</string>
    <string name="hello"><b><i>Hello World</i></b></string>
    <string name="click_me">Klik me</string>
    <string name="tombol_like"/>
</resources>