<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Button1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_icon_foreground"
        android:text="@string/click_me"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/ImageButton1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tombol_like"
        android:src="@drawable/ic_icon_foreground" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icon_foreground"
        app:fabSize="mini" />

    <!--  <TextView
          android:id="@+id/myTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/hello"
          android:textColor="@color/purple_500"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
          android:textSize="100sp"
          android:textStyle="bold|italic"
          android:typeface="monospace"
          android:lineSpacingExtra="10sp"
          />-->
    <TextView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F00"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/judul"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/sub_judul"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web|phone"
                android:scrollbarSize="30sp"
                android:scrollbars="vertical"
                android:text="@string/isi" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showToast"
                android:text="Komentar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>